gcc/testsuite/rust/rustc/ui/derives/derive-deadlock_dg.rs
use std as derive;

#[derive(Default)] // { dg-error "" "" { target *-*-* } }
struct S;

fn main() {}

